<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_AlpacaGetDint" Id="{d32a6d84-46eb-42ad-ad85-f64aba711008}">
    <Declaration><![CDATA[TYPE ST_AlpacaGetDint EXTENDS ST_AlpacaGetRequest:
STRUCT
    nValue : DINT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>