<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_AlpacaGetLreal" Id="{8853485a-2d9c-4841-b14c-3cf8de854d13}">
    <Declaration><![CDATA[TYPE ST_AlpacaGetLreal EXTENDS ST_AlpacaGetRequest:
STRUCT
    lrValue : LREAL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>